[package]
name = "kvs"
version = "0.1.0"
authors = ["goerzh <zhpan188@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
failure = "0.1.6"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
slog = "2.5.2"
clap = "2.33.0"
slog-term = "2.5.0"
slog-async = "2.4.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
